<resources>
    <string name="app_name">ProjetoReciclaSanja</string>
    <string name="title_activity_maps">Map</string>
    <string name="id">ID</string>
    <string name="nome">Nome</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="atualizar">Atualizar</string>
    <string name="remover">Remover</string>
    <string name="plotar">Plotar</string>


    <!-- STRINGS DA TELA DE PERFIL-->
    <string name="btnLogin">Botão Login </string>
    <string name="siga_me">Siga Me</string>
    <string name="mostrar_as_avalia_es">Mostrar as Avaliações</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps2">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
